# MYCOM_Trae

./: .qmake.stash  CMakeLists.txt  MYCOM_Trae.pro  Makefile  Makefile.Debug  Makefile.Release  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialtool.evb  serialtool.pro  test_settings.cpp  win32fix.cpp  打包说明.txt
.trae/documents/: Qt6串口工具实现计划.md  plan_20260103_001021.md  plan_20260103_001840.md  plan_20260103_003018.md  plan_20260103_005824.md  将Qt6串口工具打包为单独可执行文件.md
